cluster-config-files/weather-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: prod-env
spec:
  replicas: 4
  selector:
    matchLabels:
      app: weather
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - name: weather
          image: sashak9/webapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
