cluster-config-files/weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  namespace: prod-env
  labels:
    app: weather
spec:
  type: ClusterIP
  selector:
    app: weather
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
